deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewer
spec:
  selector:
    app: viewer
  ports:
    - protocol: TCP
      port: 80
